added swagger devices
